# fMRI-Analysis-to-Predict-Alzheimer-Traditional-vs-Deep-Learning

./: .env.example  .gitignore  README.md  format_code.sh  pyproject.toml
conf/: _general_sweep_subdir.yaml  _hydra_conf.yaml  data_information.yaml  output_information.yaml  scripts_build_model_CIFAR.yaml  scripts_classify_fmri.yaml  scripts_data_select_patients.yaml  scripts_train_network_CIFAR.yaml
conf/feature/: _feature_general.yaml  dnA.yaml  dnH.yaml  dnL.yaml  snA.yaml  snH.yaml  snL.yaml
conf/model/: _neural_network_params.yaml  alexnet.yaml  dt.yaml  knn.yaml  resnet18.yaml  resnet50.yaml  rf.yaml  svm.yaml
data/: selected-patients.csv
src/conf/: _hydra_conf.yaml  data_information.yaml  output_information.yaml  scripts_data_select_patients.yaml
src/data/: dataset.py
src/model/: __init__.py  _base.py  alexnet.py  example_helper.py  general.py
src/model/alexnet/: README.md  __init__.py  base.py  example.py  implementation.py
src/model/ensemble/: implementation.py
src/model/inception_v2/: README.md  __init__.py  base.py  example.py  implementation.py
src/model/neural_net/: __init__.py  train.py
src/model/traditional_ml/: train.py
src/preprocessing/: README.md  convert_signals.py  extract_metadata.py  group_scans.py  restructure.py
src/preprocessing/feature_extraction/: README.md  args.py  define_group_average_fc.py  helpers.py  run.py  (+2 more)
src/scripts/: build_model_on_cifar.py  classify_fmri.py  save_aal_figures.py  save_slices_from_fmri.py  train_network_on_CIFAR.py
src/utils/: __init__.py  environment.py  helpers.py  logger.py  pipe.py
(+24 files in other folders)
