[tool.poetry]
name = "Alzheimer AlexNet"
version = "1.0"
description = ""
authors = ["Adél Bajcsi <adel.bajcsi@ubbcluj.ro>"]
readme = "README.md"
packages = [
	{ include = "*", from = "src" }
]

[[tool.poetry.source]]
name = "torch+cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "supplemental"

[tool.poetry.dependencies]
python = "^3.11,<3.13"
albumentations = "^1.3.1"
dicom2nifti = "^2.4.10"
hydra-core = "^1.3.2"
icecream = "^2.1.3"
numpy = "^1.25.2"
matplotlib = "^3.8.2"
opencv-contrib-python = "^4.8.1"
pandas = "^2.1.1"
pipe = "^2.0"
python-dotenv = "^1.0.0"
seaborn = "^0.13.2"
scikit-learn = "^1.3.1"
tensorboard = "^2.16.2"
torch = [
#	{version = "^2.2.0", markers = "sys_platform == 'darwin'"},
	{version = "2.2.0+cu121", source = "torch+cu121", markers = "sys_platform != 'darwin'"}
]
torchinfo = "^1.8.0"
torchvision = [
#	{version = "^0.17.0", markers = "sys_platform == 'darwin'"},
	{version = "0.17.0+cu121", source = "torch+cu121", markers = "sys_platform != 'darwin'"}
]
tqdm = "^4.66.1"
pydicom = "^2.4.4"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
flake8-bugbear = "^23.12.2"
isort = "^5.12.0"
pre-commit = "^3.4.0"
pyproject-flake8 = "^6.1.0"

[tool.black]
line-length = 88

[tool.flake8]
ignore = ["E203", "E302", "E501", "E999", "F541", "W503"]
max-line-length = 88
max-complexity = 12
select = ["B", "C", "E", "F", "W", "B9"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
